Resolved #1, Deprecated selectors
Thanks, @mboles!

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,127 +1,121 @@
 @import "syntax-variables";
 
-atom-text-editor, :host {
+atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 }
 
-atom-text-editor .gutter, :host .gutter {
+atom-text-editor .gutter {
   background-color: @syntax-gutter-background-color;
   color: @syntax-gutter-text-color;
 }
 
-atom-text-editor .gutter .line-number.cursor-line, :host .gutter .line-number.cursor-line {
+atom-text-editor .gutter .line-number.cursor-line {
   background-color: @syntax-gutter-background-color-selected;
   color: @syntax-gutter-text-color-selected;
 }
 
-atom-text-editor .gutter .line-number.cursor-line-no-selection, :host .gutter .line-number.cursor-line-no-selection {
+atom-text-editor .gutter .line-number.cursor-line-no-selection {
   color: @syntax-gutter-text-color-selected;
 }
 
-atom-text-editor .wrap-guide, :host .wrap-guide {
+atom-text-editor .wrap-guide {
   color: @syntax-wrap-guide-color;
 }
 
-atom-text-editor .indent-guide, :host .indent-guide {
+atom-text-editor .indent-guide {
   color: @syntax-indent-guide-color;
 }
 
-atom-text-editor .invisible-character, :host .invisible-character {
+atom-text-editor .invisible-character {
   color: @syntax-invisible-character-color;
 }
 
-atom-text-editor .search-results .marker .region, :host .search-results .marker .region {
+atom-text-editor .search-results .syntax--marker .region {
   background-color: transparent;
   border: @syntax-result-marker-color;
 }
 
-atom-text-editor .search-results .marker.current-result .region, :host .search-results .marker.current-result .region {
+atom-text-editor .search-results .syntax--marker.current-result .region {
   border: @syntax-result-marker-color-selected;
 }
 
-atom-text-editor.is-focused .cursor, :host(.is-focused) .cursor {
+atom-text-editor.is-focused .cursor {
   border-color: @syntax-cursor-color;
 }
 
-atom-text-editor.is-focused .selection .region, :host(.is-focused) .selection .region {
+atom-text-editor.is-focused .selection .region {
   background-color: @syntax-selection-color;
 }
 
-atom-text-editor.is-focused .line-number.cursor-line-no-selection, atom-text-editor.is-focused .line.cursor-line, :host(.is-focused) .line-number.cursor-line-no-selection, :host(.is-focused) .line.cursor-line {
+atom-text-editor.is-focused .line-number.cursor-line-no-selection, atom-text-editor.is-focused .line.cursor-line {
   background-color: #616161;
 }
 
-.comment {
+.syntax--comment {
   color: #bcaaa4;
 }
 
-.string {
+.syntax--string {
   color: #b2dfdb;
 }
 
-.constant.numeric {
+.syntax--constant.syntax--numeric {
   color: #bbdefb;
 }
 
-.constant.language {
+.syntax--constant.syntax--language {
   color: #bbdefb;
 }
 
-.constant.character, .constant.other {
+.syntax--constant.syntax--character, .syntax--constant.syntax--other {
   color: #bbdefb;
 }
 
-.variable {
-}
-
-.keyword {
+.syntax--keyword {
   color: #a5d6a7;
 }
 
-.storage {
+.syntax--storage {
   color: #a5d6a7;
 }
 
-.storage.type {
+.syntax--storage.syntax--type {
   color: #b0bec5;
 }
 
-.entity.name.class {
+.syntax--entity.syntax--name.syntax--class {
   color: #fff9c4;
 }
 
-.entity.other.inherited-class {
+.syntax--entity.syntax--other.syntax--inherited-class {
   color: #ffe0b2;
 }
 
-.entity.name.function {
+.syntax--entity.syntax--name.syntax--function {
   color: #fff9c4;
 }
 
-.variable.parameter {
+.syntax--variable.syntax--parameter {
   color: #ffcc80;
 }
 
-.entity.name.tag {
+.syntax--entity.syntax--name.syntax--tag {
   color: #a5d6a7;
 }
 
-.entity.other.attribute-name {
+.syntax--entity.syntax--other.syntax--attribute-name {
   color: #fff9c4;
 }
 
-.support.function {
+.syntax--support.syntax--function {
   color: #b0bec5;
 }
 
-.support.constant {
+.syntax--support.syntax--constant {
   color: #b0bec5;
 }
 
-.support.type, .support.class {
+.syntax--support.syntax--type, .syntax--support.syntax--class {
   color: #b0bec5;
-}
-
-.support.other.variable {
 }
